# sudoku-ocr

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.test  Dockerfile.train  README.md  ROADMAP.md  pyproject.toml  requirements.txt  roadmap.md
scripts/: debug_cells.py  debug_grid.py  debug_grid_size.py  debug_hq720.py  debug_missed.py  debug_missed2.py  debug_missed3.py  debug_phantoms.py  debug_photos.py  diag_cells.py  gen_expected.py  generate_printed_digits.py  make_overlay.py  test_grid_size.py  test_photos.py  test_pipeline.py  train.py  train_pipeline.py
src/sudoku_ocr/: __init__.py  cells.py  grid.py  model.py  reader.py  types.py  viz.py
src/sudoku_ocr/weights/: digits_0_9.pt  digits_1_9.pt  digits_hex.pt
tests/: conftest.py  test_given_fill.py  test_samples.py
