[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sudoku-ocr"
version = "0.1.0"
description = "OCR for sudoku puzzle images"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "numpy",
    "opencv-python-headless",
    "torch",
]

[tool.pytest.ini_options]
markers = [
    "requires_pillow: test requires Pillow for image loading (pip install 'sudoku-ocr[formats]')",
]

[project.optional-dependencies]
formats = ["Pillow"]
dev = [
    "pytest",
    "ruff",
    "jupyterlab",
    "matplotlib",
]
